# markdown-ai-cite-remove

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  NAMING_REFACTOR_v0.1.1.md  README.md
benches/: citation_removal.rs
docs/: CITATION_FORMATS.md  DOCUMENTATION_INDEX.md  LINK_UPDATES.md
docs/examples/: perplexity.md
docs/guides/: CLI_GUIDE.md  FAQ.md
docs/instructions/: CODE_IMPLEMENTATION.md  NAMING_SEO_CONTENT_STRATEGY.md
docs/performance/: BENCHMARKING.md  VIEWING_BENCHMARKS.md
examples/: basic_usage.rs  custom_config.rs
src/: cleaner.rs  config.rs  error.rs  lib.rs  patterns.rs  remover.rs
tests/: integration_tests.rs
tests/fixtures/: chatgpt.md  matthew_rust_install.md  perplexity_export_syntax.md
