[package]
name = "markdown-ai-cite-remove"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["OpenSite AI <dev@opensite.ai>"]
license = "MIT OR Apache-2.0"
description = "High-performance removal of AI-generated citations and annotations from Markdown text"
repository = "https://github.com/opensite-ai/markdown-ai-cite-remove"
documentation = "https://docs.rs/markdown-ai-cite-remove"
homepage = "https://opensite.ai/developers"
keywords = ["markdown", "ai", "citation", "annotation", "cleanup"]
categories = ["text-processing", "parsing", "command-line-utilities"]
readme = "README.md"

[dependencies]
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"

# Optional CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "citation_removal"
harness = false

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "md-cite-remove"
path = "src/bin/cli.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
